--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
   "name": "Kamenska-Knjiga",
   "short_name": "Kamenska-Knjiga",
   "start_url": "https://sbpa-1106.github.io/SB_P0_C0_R0/P0_C0_R0.html",
-  "display": "minimal-ui",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "display": "fullscreen",
+  "background_color": "#ff0000",
+  "theme_color": "#00ff00",
   "icons": [
     {
       "src": "https://cdn.jsdelivr.net/gh/SBPA-1106/SB_Images_C0_G@main/Icon.ico",
